--- a/css/main.less
+++ b/css/main.less
@@ -245,6 +245,16 @@ ul {
     border-bottom: 1px solid #757879;
 }
 
+
+h1 {
+    color: #274386;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 17.5pt;
+    font-family: "Arial Narrow";
+    margin: 0;
+    letter-spacing: 1.5px;
+}
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -642,13 +652,24 @@ ul {
                 li {
                     display: inline-block;
                     vertical-align: top;
+                    position: relative;
 
-                    &.line {
+                    &:first-child {
+                    	&:before {
+                    		display: none;
+                    	}
+                    }
+
+                    &:before {
                         margin: 6px 5px 0 5px;
                         width: 1px;
                         background: #e7ba2c;
                         height: 10px;
+                        display: inline-block;
+                        vertical-align: top;
+                        content:"";
                     }
+
 
                     a {
                         color: #fff;
@@ -1566,16 +1587,6 @@ ul {
 
 .article-content {
     padding: 67px 10px 0 10px;
-
-    h2 {
-        color: #274386;
-        text-transform: uppercase;
-        font-weight: normal;
-        font-size: 17.5pt;
-        font-family: "Arial Narrow";
-        margin: 0;
-        letter-spacing: 1.5px;
-    }
 }
 
 @media (max-width:1600px) {
